[gd_scene load_steps=11 format=2]

[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UE_Doctor.gd" type="Script" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Doc2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Doc1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Doc3.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=2]
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UE_Doctor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="Panel" parent="." instance=ExtResource( 4 )]

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GraphicsPanel"]
position = Vector2( 62.0271, 34.9577 )
frames = SubResource( 1 )

[node name="Panel" type="Panel" parent="GraphicsPanel"]
margin_left = 40.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 10.0

[node name="StatsPanel" parent="." instance=ExtResource( 1 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "I can fix you up from
almost anything...

For the right price of course."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="ButtonContainer"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="ButtonContainer"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="HealButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -4.0
margin_right = 47.0
margin_bottom = 47.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHalf" type="Button" parent="HealButtonContainer"]
margin_right = 93.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Heal half - $2.50"

[node name="ButtonFull" type="Button" parent="HealButtonContainer"]
margin_top = 31.0
margin_right = 93.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 20 )
text = "Heal full - $5.00"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 9.0
margin_top = 11.0
margin_right = 135.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 39.0
margin_right = 86.0
margin_bottom = 12.0
text = "The Doctor"

[node name="InventoryPanel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="ButtonContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="HealButtonContainer/ButtonHalf" to="." method="_on_ButtonHalf_pressed"]
[connection signal="pressed" from="HealButtonContainer/ButtonFull" to="." method="_on_ButtonFull_pressed"]
